--- a/Server_side/MicroServiceProject/Employee-Service/src/main/resources/application.properties
+++ b/Server_side/MicroServiceProject/Employee-Service/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=pass@word1
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.hibernate.ddl-auto=update
+spring.application.name=employee-service
