--- a/Server_side/EmployeeManagementSystem/src/main/resources/application.properties
+++ b/Server_side/EmployeeManagementSystem/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password=pass@word1
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mvc.pathmatch.matching-strategy= ant_path_matcher
+spring.resources.static-locations=classpath:/webapp/
