--- a/Server_side/spring-swagger/pom.xml
+++ b/Server_side/spring-swagger/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.7.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.Employee</groupId>
-	<artifactId>EmployeeManagementSystem</artifactId>
+	<groupId>com.swag</groupId>
+	<artifactId>spring-swagger</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>EmployeeManagementSystem</name>
-	<description>This is a Spring Boot project for Employee Management System</description>
+	<name>spring-swagger</name>
+	<description>This is a springboot app to learn swagger.</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -24,29 +24,16 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jdbc</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-<!-- 3 dependencies for swagger-ui -->		
-
+		
 		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
 <dependency>
     <groupId>io.springfox</groupId>
@@ -65,8 +52,9 @@
     <groupId>io.springfox</groupId>
     <artifactId>springfox-boot-starter</artifactId>
     <version>3.0.0</version>
-</dependency>		
-
+</dependency>
+		
+		
 	</dependencies>
 
 	<build>
