--- a/Server_side/MicroServiceProject/Employee-Service/pom.xml
+++ b/Server_side/MicroServiceProject/Employee-Service/pom.xml
@@ -55,12 +55,14 @@
 
 
 	<build>
+	<finalName>spring-jar-deploy</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		
 	</build>
 
 	<dependencyManagement>
