--- a/UseCase/UseCase_Practice/BookService/src/main/resources/application.properties
+++ b/UseCase/UseCase_Practice/BookService/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 server.port=8090
-spring.datasource.url=jdbc:mysql://localhost:3306/bookservice?useSSL=false
+spring.datasource.url=jdbc:mysql://usecasedb.cvum0i2hgbku.us-east-1.rds.amazonaws.com:3306/usecaseschema?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=pass@word1
+spring.datasource.password=password1
+
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.hibernate.ddl-auto=update
+
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
