--- a/UseCase/UseCase_Practice/UserService/src/main/resources/application.properties
+++ b/UseCase/UseCase_Practice/UserService/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 server.port=9091
 spring.datasource.url=jdbc:mysql://localhost:3306/bookservice?useSSL=false
 spring.datasource.username=root
@@ -8,3 +7,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.application.name=user-service
+
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+#spring.mvc.pathmatch.matching-strategy = ant_path_matcher
+#spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+spring.resources.static-locations=classpath:/webapp/
+
