--- a/Mentor Training/UseCase-1/CustomerService/src/main/resources/application.properties
+++ b/Mentor Training/UseCase-1/CustomerService/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8090
-spring.datasource.url=jdbc:mysql://localhost:3306/bookservice?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/bank?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=pass@word1
 
@@ -7,5 +7,3 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.hibernate.ddl-auto=update
 
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
